--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cjj.android_materialrefreshlayout" >
+    package="com.cjj.android_materialrefreshlayout">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/a"
         android:label="@string/app_name"
-        android:theme="@style/BaseTheme" >
+        android:theme="@style/BaseTheme">
         <activity
             android:name=".ScrollViewActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AutoRefreshActivity"/>
-        <activity android:name=".LoadMoreActivity"/>
-        <activity android:name=".SimpleActivity"/>
-        <activity android:name=".WaveActivity"/>
-        <activity android:name=".SunActivity"/>
-        <activity android:name=".OverLayActivity"/>
+        <activity android:name=".AutoRefreshActivity" />
+        <activity android:name=".LoadMoreActivity" />
+        <activity android:name=".SimpleActivity" />
+        <activity android:name=".WaveActivity" />
+        <activity android:name=".SunActivity" />
+        <activity android:name=".OverLayActivity" />
+        <activity
+            android:name=".CollapsingToolbarLayout"
+            android:label="@string/title_activity_collapsing_toolbar_layout"
+            android:theme="@style/BaseTheme"></activity>
     </application>
 
 </manifest>
